<resources>
    <string name="app_name" translatable="false">StartInvest</string>
    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="posts">Posts: </string>

    <string name="title_home">News</string>
    <string name="title_investments">Investments</string>
    <string name="title_notifications">Account</string>
    <string name="text">Text</string>

    <string name="pref_theme_auto_battery">Auto, by Battery Saver</string>
    <string name="pref_theme_auto_time">Auto, by time of day</string>
    <string name="pref_theme_default" translatable="false">light</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_night">Dark</string>
    <string name="pref_theme_system">Follow system settings</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_notify_posts">Notify about new posts</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>

    <string name="category">Category</string>
    <string name="stocks">Stocks</string>
    <string name="bonds">Bonds</string>
    <string name="currency">Currency</string>
    <string name="derivatives">Derivatives</string>
    <string name="precious_metals">Precious metals</string>
    <string name="funds">Funds</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
</resources>