<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="@string/pref_theme_default"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:key="pref_theme"
        android:title="@string/pref_theme_title"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_notify_change"
        android:title="@string/pref_notify_posts" />
    <Preference
        android:key="pref_show_today"
        android:title="@string/about" />
    <Preference
        android:key="pref_logout"
        android:title="@string/logout" />

</PreferenceScreen>